# mLearn

./: .gitignore  AGENTS.md  ARCHITECTURE_MULTILINGUAL_REFERENCE.md  CNAME  EULA.md  LICENSE  PHASE_1_3_INTEGRATION_GUIDE.md  PHASE_1_4_GERMAN_SUPPORT.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_1_IMPLEMENTATION.md  PHASE_2_3_UNIT_TESTS.md  PHASE_2_5_COMPLETION_SUMMARY.md  PHASE_2_5_INTEGRATION_TESTING.md  PHASE_2_5_TOKENIZATION_VERIFICATION.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_NLP_ABSTRACTION.md  PRIVACY_POLICY.md  README.md  RESEARCH_SUMMARY.md  SCHOOL_DEPLOYMENT.md  SUMMARY_OF_CHANGES.md  TERMS_OF_SERVICE.md  TOKENIZATION_QUALITY_REPORT.md  capacitor.config.ts  design-qa.md  flashcards.html  index.html  injector.js  main.js  opencode.json  package-lock.json  package.json  pip_requirements.json  server.py  tsconfig.json  userscript.js  version-info.json  vite.config.ts  vitest.config.ts  welcome.html
management/backend/: Cargo.toml  Dockerfile
management/backend/migrations/: 0001_identity.sql  0002_identity_hardening.sql  0003_groups.sql  0004_group_invariants.sql  0005_provisioning.sql  0006_policies.sql  0007_llm_configuration.sql  0008_llm_quotas.sql  0009_llm_gateway.sql  0010_conversations.sql  0011_conversation_hardening.sql  0012_conversation_terminal_invariants.sql  0013_analytics.sql  0014_analytics_hardening.sql  0015_analytics_governance.sql  0016_named_policies.sql  0017_analytics_daily_totals.sql  0018_console_notifications.sql  0019_provider_health_history.sql  0020_saved_analytics_views.sql
management/backend/src/: api_keys.rs  application.rs  auth.rs  authorization.rs  config.rs  crypto.rs  db.rs  dto.rs  error.rs  groups.rs  identity.rs  lib.rs  (+8 more)
(+1696 files in other folders)
