[package]
name = "mlearn-management"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "ISC"
description = "mLearn Self-Hosted Docker Management Console backend"
publish = false

[lib]
name = "mlearn_management"
path = "src/lib.rs"

[[bin]]
name = "mlearn-management"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Docker client
bollard = "0.21"
futures-util = "0.3"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.3.2"
url = "2"
csv = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
uuid = { version = "1", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde"] }

# Embedded static assets
include_dir = "0.7"
mime_guess = "2"

# Auth
argon2 = "0.5"
base64 = "0.22"
jsonwebtoken = "9"
rand = "0.8"
aes-gcm = "0.10"
secrecy = "0.10"
zeroize = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
libc = "0.2"
sha2 = "0.10"
subtle = "2.6"
hex = "0.4"

# Error handling + logging
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
